--- a/index.html
+++ b/index.html
@@ -23,114 +23,43 @@
             margin-bottom: 20px;
         }
 
-        .header img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            margin-right: 15px;
+        h1 {
+            color: #333;
         }
 
-        .header div {
-            text-align: center;
-        }
-
-        .date-time {
-            margin-bottom: 20px;
-            font-size: 1.2em;
-            color: #555;
-        }
-
-        .todo-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            width: 350px;
-            text-align: center;
-        }
-
-        input[type="text"] {
-            width: 70%;
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin-top: 10px;
-        }
-
-        li {
-            background-color: #e4e4e4;
-            margin: 5px 0;
-            padding: 8px;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        button {
-            background-color: #ff6b6b;
-            border: none;
-            padding: 5px;
-            color: white;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #ff4a4a;
+        #timer {
+            font-size: 24px;
+            color: #ff4500;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <img src="your-photo.jpg" alt="Faheem Shaikh" />
-        <div>
-            <h1>Faheem Shaikh's To-Do List</h1>
-            <p class="date-time" id="dateTime"></p>
-        </div>
+        <h1>Faheem Shaikh's To-Do List</h1>
     </div>
-    <div class="todo-container">
-        <h2>To-Do List</h2>
-        <input type="text" id="taskInput" placeholder="Add a new task...">
-        <button onclick="addTask()">Add</button>
-        <ul id="taskList"></ul>
-    </div>
+
+    <div id="timer">Loading timer...</div>
 
     <script>
-        function updateDateTime() {
+        // Calculate the target date (11,165 days from today)
+        const targetDate = new Date();
+        targetDate.setDate(targetDate.getDate() + 11165);
+
+        function updateTimer() {
             const now = new Date();
-            const formattedDate = now.toLocaleDateString();
-            const formattedTime = now.toLocaleTimeString();
-            document.getElementById("dateTime").textContent = `Date: ${formattedDate} | Time: ${formattedTime}`;
+            const timeLeft = targetDate - now;
+
+            const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+            document.getElementById("timer").textContent = 
+                `${days} days ${hours} hours ${minutes} minutes ${seconds} seconds left!`;
         }
 
-        setInterval(updateDateTime, 1000);
-
-        function addTask() {
-            const taskInput = document.getElementById("taskInput");
-            const taskList = document.getElementById("taskList");
-
-            if (taskInput.value.trim() !== "") {
-                const li = document.createElement("li");
-                const serialNo = taskList.childElementCount + 1;
-                li.textContent = `${serialNo}. ${taskInput.value}`;
-
-                const deleteButton = document.createElement("button");
-                deleteButton.textContent = "Delete";
-                deleteButton.onclick = () => li.remove();
-
-                li.appendChild(deleteButton);
-                taskList.appendChild(li);
-                taskInput.value = "";
-            }
-        }
+        setInterval(updateTimer, 1000);
     </script>
 </body>
 </html>
-
